// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: cluster sysinfo 1`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="system_info"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="system_info.page"
  />
  <div
    className="page-notifs"
  >
    <withCurrentUserContext(withAppStateContext(UpdateNotification))
      dismissable={false}
    />
  </div>
  <withAppStateContext(PageHeader)
    isCluster={true}
    loading={false}
    logLevel="DEBUG"
    onLogLevelChange={[Function]}
    serverId="asd564-asd54a-5dsfg45"
    showActions={true}
    version="7.8"
  />
  <ClusterSysInfos
    expandedCards={[]}
    sysInfoData={
      {
        "Application Nodes": [
          {
            "Compute Engine Database Connection": {
              "Pool Active Connections": 0,
              "Pool Initial Size": 0,
            },
            "Compute Engine JVM Properties": {
              "file.encoding": "UTF-8",
              "file.separator": "/",
            },
            "Compute Engine JVM State": {
              "Free Memory (MB)": 78,
              "Max Memory (MB)": 1024,
            },
            "Compute Engine Logging": {
              "Logs Level": "INFO",
            },
            "Compute Engine Tasks": {
              "In Progress": 0,
              "Pending": 0,
            },
            "Health": "GREEN",
            "Health Causes": [],
            "Host": "10.0.0.0",
            "Name": "server9.example.com",
            "Plugins": {
              "java": "5.13.0.17924 [SonarJava]",
            },
            "System": {
              "Version": "7.8",
            },
            "Web Database Connection": {
              "Pool Active Connections": 1,
            },
            "Web JVM Properties": {
              "file.encoding": "UTF-8",
              "file.separator": "/",
            },
            "Web JVM State": {
              "Free Memory (MB)": 122,
              "Max Memory (MB)": 1024,
            },
            "Web Logging": {
              "Logs Level": "DEBUG",
            },
          },
          {
            "Compute Engine Database Connection": {
              "Pool Active Connections": 0,
              "Pool Initial Size": 0,
            },
            "Compute Engine JVM Properties": {
              "file.encoding": "UTF-8",
              "file.separator": "/",
            },
            "Compute Engine JVM State": {
              "Free Memory (MB)": 89,
              "Max Memory (MB)": 1024,
            },
            "Compute Engine Logging": {
              "Logs Level": "INFO",
            },
            "Compute Engine Tasks": {
              "In Progress": 0,
              "Pending": 0,
            },
            "Health": "GREEN",
            "Health Causes": [],
            "Host": "10.0.0.0",
            "Name": "server9.example.com",
            "Plugins": {
              "java": "5.13.0.17924 [SonarJava]",
            },
            "System": {
              "Version": "7.8",
            },
            "Web Database Connection": {
              "Pool Active Connections": 0,
              "Pool Max Connections": 60,
            },
            "Web JVM Properties": {
              "file.encoding": "UTF-8",
              "file.separator": "/",
            },
            "Web JVM State": {
              "Free Memory (MB)": 111,
              "Max Memory (MB)": 1024,
            },
            "Web Logging": {
              "Logs Level": "INFO",
            },
          },
        ],
        "Compute Engine Tasks": {
          "Total In Progress": 0,
          "Total Pending": 0,
        },
        "Database": {
          "Database": "PostgreSQL",
          "Database Version": "10.3",
          "Driver": "PostgreSQL JDBC Driver",
          "Driver Version": "42.2.5",
          "URL": "jdbc:postgresql://localhost/sonar",
          "Username": "sonar",
        },
        "Health": "GREEN",
        "Health Causes": [],
        "Search Indexes": {
          "Index components - Docs": 30445,
          "Index components - Shards": 10,
        },
        "Search Nodes": [
          {
            "Host": "10.0.0.0",
            "Name": "server.example.com",
            "Search State": {
              "CPU Usage (%)": 0,
              "Disk Available": "93 GB",
            },
          },
          {
            "Host": "10.0.0.0",
            "Name": "server.example.com",
            "Search State": {
              "CPU Usage (%)": 0,
              "Disk Available": "93 GB",
            },
          },
          {
            "Host": "10.0.0.0",
            "Name": "server.example.com",
            "Search State": {
              "CPU Usage (%)": 0,
              "Disk Available": "93 GB",
            },
          },
        ],
        "Search State": {
          "Nodes": 3,
          "State": "GREEN",
        },
        "Settings": {
          "sonar.cluster.enabled": "true",
          "sonar.cluster.node.name": "server9.example.com",
        },
        "Statistics": {
          "ncloc": 989880,
        },
        "System": {
          "High Availability": true,
          "Server ID": "asd564-asd54a-5dsfg45",
          "Version": "7.8",
        },
      }
    }
    toggleCard={[Function]}
  />
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="system_info"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="system_info.page"
  />
  <div
    className="page-notifs"
  >
    <withCurrentUserContext(withAppStateContext(UpdateNotification))
      dismissable={false}
    />
  </div>
</div>
`;

exports[`should render correctly: stand-alone sysinfo 1`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="system_info"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="system_info.page"
  />
  <div
    className="page-notifs"
  >
    <withCurrentUserContext(withAppStateContext(UpdateNotification))
      dismissable={false}
    />
  </div>
  <withAppStateContext(PageHeader)
    isCluster={false}
    loading={false}
    logLevel="DEBUG"
    onLogLevelChange={[Function]}
    serverId="asd564-asd54a-5dsfg45"
    showActions={true}
    version="7.8"
  />
  <StandAloneSysInfos
    expandedCards={[]}
    sysInfoData={
      {
        "ALMs": {},
        "Bundled": {},
        "Compute Engine Database Connection": {
          "Pool Active Connections": 0,
          "Pool Initial Size": 0,
        },
        "Compute Engine JVM Properties": {
          "file.encoding": "UTF-8",
          "file.separator": "/",
        },
        "Compute Engine JVM State": {
          "Free Memory (MB)": 89,
          "Max Memory (MB)": 1024,
        },
        "Compute Engine Logging": {
          "Logs Dir": "/logs",
          "Logs Level": "DEBUG",
        },
        "Compute Engine Tasks": {
          "In Progress": 0,
          "Pending": 0,
        },
        "Database": {
          "Database": "PostgreSQL",
          "Database Version": "10.3",
          "Driver": "PostgreSQL JDBC Driver",
          "Driver Version": "42.2.5",
          "URL": "jdbc:postgresql://localhost/sonar",
          "Username": "sonar",
        },
        "Health": "GREEN",
        "Health Causes": [],
        "Plugins": {},
        "Search Indexes": {
          "Index components - Docs": 30445,
          "Index components - Shards": 10,
        },
        "Search State": {
          "Nodes": 3,
          "State": "GREEN",
        },
        "Settings": {
          "sonar.cluster.enabled": "true",
          "sonar.cluster.node.name": "server9.example.com",
        },
        "System": {
          "High Availability": false,
          "Server ID": "asd564-asd54a-5dsfg45",
          "Version": "7.8",
        },
        "Web Database Connection": {
          "Pool Active Connections": 0,
          "Pool Max Connections": 60,
        },
        "Web JVM Properties": {
          "file.encoding": "UTF-8",
          "file.separator": "/",
        },
        "Web JVM State": {
          "Free Memory (MB)": 111,
          "Max Memory (MB)": 1024,
        },
        "Web Logging": {
          "Logs Dir": "/logs",
          "Logs Level": "INFO",
        },
      }
    }
    toggleCard={[Function]}
  />
</div>
`;
